<resources>
    <string name="app_name">Localization</string>
    <string name="title_activity_maps">Map</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="address">Address: </string>
    <string name="check_in">Check In</string>
    <string name="service_not_available">Service not available!</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude!</string>
    <string name="no_address_found">No address found!</string>
    <string name="address_found">Address is found!</string>
    <string name="no_geocoder_available">Geocoder is not available!</string>
    <string name="update_time">Update time: </string>
    <string name="heat_map">Show Heatmap</string>
    <string name="check_in_locations">Show Checked in Locations</string>
    <string name="title_activity_location_data">LocationDataActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gps_vs_network_maps">GPS VS Network</string>
    <string name="gps_vs_network">GPS VS Network</string>
    <string name="accuracy">Accuracy: </string>
    <string name="gps">GPS:  </string>
    <string name="network">Network:  </string>
    <string name="delay">Delay:  </string>
    <string name="distance">Distance: </string>
    <string name="update_location">Update Location</string>
</resources>
