<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
              android:orientation="vertical">
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"/>
        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"/>
        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>
            -->
    <TextView
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/update_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <!--
    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/check_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in"/>
        <Button
            android:id="@+id/heat_map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heat_map"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/checked_in_locations_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_in_locations"/>
        <Button
            android:id="@+id/gps_vs_network_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gps_vs_network"/>
    </LinearLayout>


<fragment
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:id="@+id/map"
          tools:context=".MapsActivity"
          android:name="com.google.android.gms.maps.SupportMapFragment"/>


</LinearLayout>
